--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,20 @@
-pipeline{
+pipeline {
     agent any
-    stages{
+    stages {
         stage('Clone') {
-            steps{
+            steps {
                 git "https://github.com/PranjalTanpure/InternshipPracticeRepo.git"
-
             }
-    }
-    stage('Build'){
-        steps{
-            sh 'echo "Building the project ...'
-    }
-}
-stage('Test'){
-    steps{
-        sh 'python -m unittest discover -s ./ -p "test_*.py"'
         }
+        stage('Build') {
+            steps {
+                sh 'echo "Building the project ..."'
+            }
         }
-        
+        stage('Test') {
+            steps {
+                sh 'python -m unittest discover -s ./ -p "test_*.py"'
+            }
+        }
     }
 }
